src/styles/Exercises.css
header {
    height: auto;
}

.search-bar {
    display: flex;
    align-items: center;
    background-color: #a0a0a0;
    border-radius: 15px;
    padding: 0 1rem 0 1rem;
    height: 2.5rem;
    margin: 0rem 4rem 2rem 4rem;
}

.search-bar img {
    height: 25px;
    width: 25px;
    margin: 0 1rem 0 0;
}

.search-bar input {
    height: 100%;
    width: 100%;
    background-color: transparent;
    color: white;
    border-radius: 15px;
    border: none;
    font-size: 1.25rem;
    cursor: text;
}

.search-bar input:focus {
    outline: none;
}

.search-bar input::placeholder {
    color: rgb(224, 224, 224);
}

.filter {
    display: flex;
    margin: 2rem 4rem 2rem 4rem;
    justify-content: space-between;
}

.filter select {
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    cursor: pointer;
    border-radius: 15px;
    text-align: center;
    width: 48%;
    height: 2.5rem;
    border: none;
    background-color: #1d495f;
    color: white;
    font-family: "Inter", sans-serif;
    font-weight: 600;
    font-size: 1.15rem;
    letter-spacing: 1px;
    overflow: hidden ;
}

.loading {
    font-family: "Play", sans-serif;
    font-weight: 700;
    text-align: center;
}

@media screen and (max-width: 675px) {
    .search-bar {
        margin: 2rem;
    }


    .filter {
        margin: 2rem;
    }

    .filter select {
        font-size: .75rem;
    }
}

